cluster/apps/networking/error-pages/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages
  namespace: networking
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app.kubernetes.io/name: error-pages
